<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/label_add_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/add_description"
        app:layout_constraintTop_toBottomOf="@id/edt_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="5dp"
        android:background="@drawable/bg_rounded_border"
        app:layout_constraintTop_toBottomOf="@id/edt_description"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:id="@+id/info_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp"
        android:background="@drawable/bg_rounded_border_filled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_date">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:text="@string/static_text_hypertension_grade_2"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/static_text_description"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/systolic_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_container"
        app:layout_constraintEnd_toStartOf="@id/diastolic_container">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:text="@string/label_systolic"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_systolic_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_unit_mm_hg"
            android:textColor="@color/black"
            />

        <NumberPicker
            android:id="@+id/systolic_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_white"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/diastolic_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintStart_toEndOf="@id/systolic_container"
        app:layout_constraintTop_toBottomOf="@id/info_container"
        app:layout_constraintEnd_toStartOf="@id/pulse_container">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:text="@string/label_diastolic"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_diastolic_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_unit_mm_hg"
            android:textColor="@color/black"
            />

        <NumberPicker
            android:id="@+id/diastolic_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_white"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pulse_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintStart_toEndOf="@id/diastolic_container"
        app:layout_constraintTop_toBottomOf="@id/info_container"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:text="@string/label_pulse"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_pulse_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_unit_bpm"
            android:textColor="@color/black"
            />

        <NumberPicker
            android:id="@+id/pulse_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_white"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:text="@string/label_done"
        android:textSize="14sp"
        app:cornerRadius="40dp"
        android:textAllCaps="false"
        android:drawablePadding="5dp"
        app:backgroundTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>