<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    >

    <LinearLayout
        android:id="@+id/container_no_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/ic_no_data"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:text="@string/label_no_measurements"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/label_description_no_data"
            android:textColor="@color/black"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:text="@string/label_add_measurement"
            android:textSize="14sp"
            app:cornerRadius="40dp"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_plus"
            android:drawablePadding="5dp"
            app:backgroundTint="@color/blue"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>