<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_background">

    <LinearLayout
        android:id="@+id/container_no_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/ic_no_data"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/label_no_measurements"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/label_description_no_data"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:drawableLeft="@drawable/ic_plus"
            android:drawablePadding="5dp"
            android:text="@string/label_add_measurement"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:backgroundTint="@color/blue"
            app:cornerRadius="40dp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/data_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/average_data_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:weightSum="3"
            android:background="@drawable/bg_rounded_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="18sp"
                    android:text="@string/label_systolic"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_systolic_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:text="160"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_systolic_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_unit_mm_hg"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="18sp"
                    android:text="@string/label_diastolic"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_diastolic_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:text="160"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_diastolic_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_unit_mm_hg"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="18sp"
                    android:text="@string/label_pulse"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_pulse_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:text="160"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_pulse_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_unit_mm_hg"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
        </LinearLayout>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/average_data_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_measurements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/label_measurements"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chart"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_track"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_measurements"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:itemCount="18"
            tools:listitem="@layout/item_track" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded"
            app:srcCompat="@drawable/ic_plus"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>